--- a/style.css
+++ b/style.css
@@ -1,2 +1,5 @@
 @charset "utf-8";
 *{margin:0; padding:0;}
+header{width: 1000px; margin:0;}
+.visual{width: 1000px; background: red;}
+footer{width: 1000px; height: 100px; background:green;}
